# rust-lambda-graphql

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  serverless.yaml
.github/workflows/: deploy.yaml
src/: errors.rs  main.rs  schemas.rs
