[package]
name = "rust-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "6.0.4"
cross = "0.2.5"
futures-util = "0.3.28"
http = "0.2.9"
hyper = "0.14.27"
lambda_http = { version = "0.8.1", default-features = false, features = ["apigw_rest"] }
lambda_runtime = "0.8.1"
lazy_static = "1.4.0"
serde = "1.0.188"
serde_json = "1.0.105"
thiserror = "1.0.47"
tokio = { version = "1", features = ["macros"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["cors"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

